Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="box">
 				<h1>Completed projects</h1>
 				<h2>TOCHKA</h2>
-				<p><a href="dstrekelj.github.io/tochka">TOCHKA</a> is a very simple video game  written in Haxe using the <a href="http://haxepunk.com/">HaxePunk</a> library. It was developed as part of my bachelor's thesis on cross-platform computer game development. The goal of the game is to dodge incoming obstacles for as long as possible in order to attain the high score.</p>
+				<p><a href="/tochka/">TOCHKA</a> is a very simple video game  written in Haxe using the <a href="http://haxepunk.com/">HaxePunk</a> library. It was developed as part of my bachelor's thesis on cross-platform computer game development. The goal of the game is to dodge incoming obstacles for as long as possible in order to attain the high score.</p>
 				<p>The game's source code is <a href="https://github.com/dstrekelj/tochka">freely available</a>.</p>
 			</div>
 		</div>
