Updated site with new build of blog script. Updated stylesheet.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="container main">
-      <div id="content">
+      <div id="article">
         <div class="timestamp">Written on 2015-09-28 @ 12:14</div>
         <h1>Welcome!</h1>
         <p>This page was made with <a href="http://haxe.org/">Haxe</a> targeting JavaScript.</p>
@@ -28,6 +28,6 @@
       </div>
     </div>
   </div>
-<script src="gitblog.js"></script>
+  <script src="gitblog.js"></script>
 </body>
 </html>
